--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -73,7 +73,7 @@ body {
     flex-direction: column;
     position: absolute;
     width: 100%;
-    top: 6vh;
+    top: 10vh;
     left: 0;
     background-color: #E9E8E6;
     padding: 20px 0;
@@ -86,6 +86,7 @@ body {
   .nav-links.active {
     max-height: max-content; /* Adjust this value based on your content */
     opacity: 1;
+    z-index: 1;
   }
 }
 
